# surviper

./: .gitignore  package-lock.json  pyproject.toml
form/surviper/: package.json  wrangler.toml
form/surviper/src/: index.js
site/: .parcelrc  index.html  package-lock.json  package.json  wrangler.toml
site/src/: app.js  form.js  index.html  sheets.js  styles.css
site/src/templates/: index.hbs
surviper/: classification.py  embeddings.py  main.py  pipeline.py  run-frame-detection.py  setup-labels.py  video-split.py
tests/: test_surviper.py
